force-app/main/default/objects/Marketing_Cloud_Journey_Event__c/fields/Data1__c.field-meta.xml
<CustomField>
    <fullName>Data1__c</fullName>
    <description>Additional data column 1.</description>
    <inlineHelpText>Additional data column 1.</inlineHelpText>
    <label>Data1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>