force-app/main/default/objects/Marketing_Cloud_Journey_Event__c/fields/Data2__c.field-meta.xml
<CustomField>
    <fullName>Data2__c</fullName>
    <description>Additional data column 2.</description>
    <inlineHelpText>Additional data column 2.</inlineHelpText>
    <label>Data2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>