force-app/main/default/objects/Marketing_Cloud_Journey_Event__c/fields/Data3__c.field-meta.xml
<CustomField>
    <fullName>Data3__c</fullName>
    <description>Additional data column 3.</description>
    <inlineHelpText>Additional data column 3.</inlineHelpText>
    <label>Data3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>